syntax = "proto3";
package private;

enum Status {
  UNKNOWN  = 0;
  IDLE     = 1;
  SCALING  = 2;
  RUNNING  = 3;
  STOPPING = 4;
  QUITTING = 5;
}

service Manager {
  rpc Start(stream StartResponse) returns (stream StartRequest) {}
  rpc Stop(stream StopResponse) returns (stream StopRequest) {}

  rpc Heartbeat(stream HeartbeatResponse) returns (Empty) {} 
}

message StartRequest {
  int32  Users = 1;
  double Rate  = 2;
  int64  Wait  = 3;
}

message StartResponse {}

message StopRequest{}

message StopResponse{}

message QuitRequest{}

message QuitResponse{}

message HeartbeatResponse{}

message Empty{}
